--- a/CourseSessions/Session1/Session1inclass.Rmd
+++ b/CourseSessions/Session1/Session1inclass.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Session 1"
 author: "T. Evgeniou"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 <br>
