--- a/Exercises/Exerciseset1/JadaExerciseSet1.Rmd
+++ b/Exercises/Exerciseset1/JadaExerciseSet1.Rmd
@@ -2,7 +2,9 @@
 ---
 title: "Exercise Set 1"
 author: "T. Evgeniou"
-output: html_document
+output:
+  html_document: default
+  pdf_document: default
 ---
 
 
@@ -87,13 +89,17 @@ pnl_plot(SPY)
 3. *(Extra points)* What if we want to also see the returns of another company, say Yahoo!, in the same period? Can you get that data and report the statistics for Yahoo!'s stock, too? 
 
 **Your Answers here:**
-<br>
-<br>
-<br>
-<br>
 
-<hr>
-<hr>
+Question 1:
+* The line `mytickers = c("SPY", "AAPL").  From file `dataset1.R`.
+
+Question 2:
+* The cumulative returns of Apple during this period is 596.41%.
+* The average daily returns of Apple during this period is 0.148%;
+* The standard deviation of the daily returns of Apple during this period is 2.39%
+
+Question 3:
+* Add  ,"YHOO"  after "AAPL" in the line `mytickers = c("SPY", "AAPL") from file `dataset1.R`.
 
 ### Part II: Simple Matrix Manipulations
 
@@ -128,13 +134,23 @@ We can also transpose the matrix of returns to create a new "horizontal" matrix.
 2. Based on the help for the R function *apply* (`help(apply)`), can you create again the portfolio of S&P and Apple and plot the returns in a new figure below?
 
 **Your Answers here:**
-<br>
-<br>
-<br>
-<br>
 
-<hr>
-<hr>
+Question 1:
+* nrow(transposedData) and ncol(transposedData)
+
+Question 2:
+```{r eval = TRUE, echo=TRUE, error = FALSE, warning=FALSE,message=FALSE,results='asis'}
+transposedData = t(StockReturns)
+```
+
+```{r eval = TRUE, echo=TRUE, error = FALSE, warning=FALSE,message=FALSE,results='asis'}
+portfolio_transpose = apply(transposedData,2,mean)
+names(portfolio_transpose) <- rownames(StockReturns)
+```
+
+```{r echo=FALSE, comment=NA, warning=FALSE, message=FALSE,results='asis',fig.align='center', fig=TRUE}
+pnl_plot(portfolio_transpose)
+```
 
 ### Part III: Reproducibility and Customization
 
@@ -146,13 +162,12 @@ This is an important step and will get you to think about the overall process on
 2. *(Extra Exercise)*  Can you get the returns of a few companies and plot the returns of an equal weighted portfolio with those companies during some period you select? 
 
 **Your Answers here:**
-<br>
-<br>
-<br>
-<br>
 
-<hr>
-<hr>
+Question 1:
+* Make the line`startDate = "2001-01-01"` in file `dataSet1.R`
+
+Question 2:
+* Add the new tickers  after "AAPL" in the line `mytickers = c("SPY", "AAPL") from file `dataset1.R`.
 
 ###  Part IV: Read/Write .CSV files
 
@@ -180,13 +195,10 @@ myData + StockReturns[1:40,]
 ```
 
 **Your Answers here:**
-<br>
-<br>
-<br>
-<br>
 
-<hr>
-<hr>
+Question 1:
+* It says: Error: object 'sum(myData != StockReturns[1:20,])' not found
+
 
 ### Extra Question
 
